トップページテンプレート作成

--- a/themes/custom/masaya_kemmochi_portfolio/masaya_kemmochi_portfolio.info.yml
+++ b/themes/custom/masaya_kemmochi_portfolio/masaya_kemmochi_portfolio.info.yml
@@ -8,6 +8,7 @@ libraries:
 base theme: stable9
 regions:
   header: 'ヘッダー'
+  mainvisual: 'メインビジュアル'
   content: 'コンテンツ'
   sidebar: 'サイドバー'
   footer: 'フッター'
