ステータスメッセージのスタイル作成

--- a/themes/custom/masaya_kemmochi_portfolio/masaya_kemmochi_portfolio.libraries.yml
+++ b/themes/custom/masaya_kemmochi_portfolio/masaya_kemmochi_portfolio.libraries.yml
@@ -5,6 +5,7 @@ global-styles:
       css/vendor/destyle.css: {}
       css/vendor/modaal.min.css: {}
       css/style.css: {}
+      css/core/messages.css: {}
 global-scripts:
   version: 1.x
   js:
