--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "drupal/devel": "^5.1",
         "drupal/devel_kint_extras": "^1.1",
         "drupal/metatag": "^1.24",
-        "drupal/redirect": "^1.8"
+        "drupal/redirect": "^1.8",
+        "drupal/twig_tweak": "^3.2"
     },
     "conflict": {
         "drupal/drupal": "*"
